--- a/notes/note_metrics.ipynb
+++ b/notes/note_metrics.ipynb
@@ -258,12 +258,14 @@
     "            df = pd.read_excel(f'out/compare/LMGAOB/fold5_{fold}/{cond}/test/report.xlsx', sheet_name='cases', index_col=0)\n",
     "            dfs.append(df)\n",
     "        df = pd.concat(dfs)\n",
-    "        df = df[df['diag_org'] != 'B']\n",
+    "        df_B = df[df['diag_org'] == 'B']        \n",
+    "        \n",
+    "        df = df[df['diag_org'] != 'B']        \n",
     "        if coarse:\n",
     "            f = df[df['correct3'] > 0]\n",
     "        else:\n",
     "            f = df[df['correct'] > 0]\n",
-    "        return f'{len(f)+5}/{len(df)+5}' # Add 5(B)\n",
+    "        return f'{len(f)+5}/{len(df)+5}'\n",
     "\n",
     "    dfs = []\n",
     "    for fold in range(5):\n",
@@ -372,7 +374,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"itables_2f0f389a_0fe7_474b_99fe_d868d732eb7a\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
+       "<table id=\"itables_6af85b70_df15_44db_88bd_4affd7f84de5\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
        "<thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -496,7 +498,7 @@
        "<script type=\"module\">\n",
        "    const { DataTable, jQuery: $ } = await import(window._datatables_src_for_itables_2_2_2);\n",
        "\n",
-       "    document.querySelectorAll(\"#itables_2f0f389a_0fe7_474b_99fe_d868d732eb7a:not(.dataTable)\").forEach(table => {\n",
+       "    document.querySelectorAll(\"#itables_6af85b70_df15_44db_88bd_4affd7f84de5:not(.dataTable)\").forEach(table => {\n",
        "        if (!(table instanceof HTMLTableElement))\n",
        "            return;\n",
        "\n",
@@ -600,7 +602,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"itables_867e80fe_0d24_4395_9218_4f3f80386d0a\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
+       "<table id=\"itables_5577e0b2_5713_42dd_b34c_190a4c72980b\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
        "<thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -724,7 +726,7 @@
        "<script type=\"module\">\n",
        "    const { DataTable, jQuery: $ } = await import(window._datatables_src_for_itables_2_2_2);\n",
        "\n",
-       "    document.querySelectorAll(\"#itables_867e80fe_0d24_4395_9218_4f3f80386d0a:not(.dataTable)\").forEach(table => {\n",
+       "    document.querySelectorAll(\"#itables_5577e0b2_5713_42dd_b34c_190a4c72980b:not(.dataTable)\").forEach(table => {\n",
        "        if (!(table instanceof HTMLTableElement))\n",
        "            return;\n",
        "\n",
@@ -836,7 +838,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"itables_e17262e9_4655_4f1e_afca_33c92247c72a\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
+       "<table id=\"itables_101c47c8_185e_465f_a569_680c033dae17\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
        "<thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -956,7 +958,7 @@
        "<script type=\"module\">\n",
        "    const { DataTable, jQuery: $ } = await import(window._datatables_src_for_itables_2_2_2);\n",
        "\n",
-       "    document.querySelectorAll(\"#itables_e17262e9_4655_4f1e_afca_33c92247c72a:not(.dataTable)\").forEach(table => {\n",
+       "    document.querySelectorAll(\"#itables_101c47c8_185e_465f_a569_680c033dae17:not(.dataTable)\").forEach(table => {\n",
        "        if (!(table instanceof HTMLTableElement))\n",
        "            return;\n",
        "\n",
@@ -1048,7 +1050,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"itables_d8d1b84c_9bf3_40ba_9c67_a9eca9d41b36\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
+       "<table id=\"itables_2e3703bb_2c37_458e_93ac_615ea992cff4\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
        "<thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -1168,7 +1170,7 @@
        "<script type=\"module\">\n",
        "    const { DataTable, jQuery: $ } = await import(window._datatables_src_for_itables_2_2_2);\n",
        "\n",
-       "    document.querySelectorAll(\"#itables_d8d1b84c_9bf3_40ba_9c67_a9eca9d41b36:not(.dataTable)\").forEach(table => {\n",
+       "    document.querySelectorAll(\"#itables_2e3703bb_2c37_458e_93ac_615ea992cff4:not(.dataTable)\").forEach(table => {\n",
        "        if (!(table instanceof HTMLTableElement))\n",
        "            return;\n",
        "\n",
@@ -1270,17 +1272,17 @@
        "<svg  width=\"605\" height=\"55\"><rect x=\"0\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#30a2da;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"55\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#fc4f30;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"110\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#e5ae38;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"165\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#6d904f;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"220\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#8b8b8b;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"275\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#17becf;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"330\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#9467bd;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"385\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#d62728;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"440\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#1f77b4;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"495\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#e377c2;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"550\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#8c564b;stroke-width:2;stroke:rgb(255,255,255)\"/></svg>"
       ],
       "text/plain": [
-       "[(0.188235, 0.635294, 0.854902),\n",
-       " (0.988235, 0.309804, 0.188235),\n",
-       " (0.898039, 0.682353, 0.219608),\n",
-       " (0.427451, 0.564706, 0.309804),\n",
-       " (0.545098, 0.545098, 0.545098),\n",
-       " (0.090196, 0.745098, 0.811765),\n",
-       " (0.580392, 0.403922, 0.741176),\n",
-       " (0.839216, 0.152941, 0.156863),\n",
-       " (0.121569, 0.466667, 0.705882),\n",
-       " (0.890196, 0.466667, 0.760784),\n",
-       " (0.54902, 0.337255, 0.294118)]"
+       "[(0.18824, 0.63529, 0.85490),\n",
+       " (0.98823, 0.30980, 0.18824),\n",
+       " (0.89804, 0.68235, 0.21961),\n",
+       " (0.42745, 0.56471, 0.30980),\n",
+       " (0.54510, 0.54510, 0.54510),\n",
+       " (0.09020, 0.74510, 0.81176),\n",
+       " (0.58039, 0.40392, 0.74118),\n",
+       " (0.83922, 0.15294, 0.15686),\n",
+       " (0.12157, 0.46667, 0.70588),\n",
+       " (0.89020, 0.46667, 0.76078),\n",
+       " (0.54902, 0.33726, 0.29412)]"
       ]
      },
      "metadata": {},
@@ -1415,7 +1417,7 @@
     "            p_values.append(p_value)\n",
     "\n",
     "    # Benjamini-Hochberg correction\n",
-    "    _, p_values, _, _ = multipletests(p_values, method='fdr_bh')\n",
+    "    # _, p_values, _, _ = multipletests(p_values, method='fdr_bh')\n",
     "\n",
     "\n",
     "    # Create significance matrix\n",
@@ -1465,7 +1467,8 @@
     "\n",
     "    plt.subplots_adjust(left=0.30, right=0.70, top=0.95, bottom=0.15)\n",
     "\n",
-    "    fig_path = f'out/figs/box_{target}_{grains}_{limit}_{key}.png'\n",
+    "    os.makedirs('out/figs/box', exist_ok=True)\n",
+    "    fig_path = f'out/figs/box/{target}_{grains}_{limit}_{key}.png'\n",
     "    plt.savefig(fig_path, format='png', dpi=DPI)\n",
     "    print(f'saved {fig_path}')\n",
     "    if show:\n",
@@ -1502,25 +1505,21 @@
      "text": [
       "saved out/figs/box_cv_fine_500_pacc.png\n",
       "saved out/figs/box_cv_fine_500_recall.png\n",
-      "saved out/figs/box_cv_fine_500_acc.png\n",
-      "saved out/figs/box_cv_fine_500_f1.png\n",
       "saved out/figs/box_ebrains_fine_500_pacc.png\n",
-      "saved out/figs/box_ebrains_fine_500_recall.png\n",
-      "saved out/figs/box_ebrains_fine_500_acc.png\n",
-      "saved out/figs/box_ebrains_fine_500_f1.png\n"
+      "saved out/figs/box_ebrains_fine_500_recall.png\n"
      ]
     }
    ],
    "source": [
     "paired_box('cv', False, LIMIT, 'pacc')\n",
     "paired_box('cv', False, LIMIT, 'recall')\n",
-    "paired_box('cv', False, LIMIT, 'acc')\n",
-    "paired_box('cv', False, LIMIT, 'f1')\n",
+    "# paired_box('cv', False, LIMIT, 'acc')\n",
+    "# paired_box('cv', False, LIMIT, 'f1')\n",
     "\n",
     "paired_box('ebrains', False, LIMIT, 'pacc')\n",
     "paired_box('ebrains', False, LIMIT, 'recall')\n",
-    "paired_box('ebrains', False, LIMIT, 'acc')\n",
-    "paired_box('ebrains', False, LIMIT, 'f1')"
+    "# paired_box('ebrains', False, LIMIT, 'acc')\n",
+    "# paired_box('ebrains', False, LIMIT, 'f1')"
    ]
   },
   {
@@ -1543,25 +1542,21 @@
      "text": [
       "saved out/figs/box_cv_coarse_500_pacc.png\n",
       "saved out/figs/box_cv_coarse_500_recall.png\n",
-      "saved out/figs/box_cv_coarse_500_acc.png\n",
-      "saved out/figs/box_cv_coarse_500_f1.png\n",
       "saved out/figs/box_ebrains_coarse_500_pacc.png\n",
-      "saved out/figs/box_ebrains_coarse_500_recall.png\n",
-      "saved out/figs/box_ebrains_coarse_500_acc.png\n",
-      "saved out/figs/box_ebrains_coarse_500_f1.png\n"
+      "saved out/figs/box_ebrains_coarse_500_recall.png\n"
      ]
     }
    ],
    "source": [
     "paired_box('cv', True, LIMIT, 'pacc')\n",
     "paired_box('cv', True, LIMIT, 'recall')\n",
-    "paired_box('cv', True, LIMIT, 'acc')\n",
-    "paired_box('cv', True, LIMIT, 'f1')\n",
+    "# paired_box('cv', True, LIMIT, 'acc')\n",
+    "# paired_box('cv', True, LIMIT, 'f1')\n",
     "\n",
     "paired_box('ebrains', True, LIMIT, 'pacc')\n",
     "paired_box('ebrains', True, LIMIT, 'recall')\n",
-    "paired_box('ebrains', True, LIMIT, 'acc')\n",
-    "paired_box('ebrains', True, LIMIT, 'f1')"
+    "# paired_box('ebrains', True, LIMIT, 'acc')\n",
+    "# paired_box('ebrains', True, LIMIT, 'f1')"
    ]
   },
   {
@@ -1658,7 +1653,9 @@
     "    }[target]\n",
     "    plt.title(f'{target_dataset} - {key_label}')    \n",
     "    plt.tight_layout()\n",
-    "    fig_path = f'out/figs/lines_{target}_{grains}_{key}.png'\n",
+    "\n",
+    "    os.makedirs('out/figs/lines', exist_ok=True)\n",
+    "    fig_path = f'out/figs/lines/{target}_{grains}_{key}.png'\n",
     "    plt.savefig(fig_path, format=\"png\", dpi=DPI)\n",
     "    print(f'wrote {fig_path}')\n",
     "    if show:\n",
