--- a/notes/note_dataset.ipynb
+++ b/notes/note_dataset.ipynb
@@ -33,7 +33,9 @@
     "from umap import UMAP\n",
     "import ipynbname\n",
     "from endaaman.ml import fix_global_seed\n",
+    "from itables import init_notebook_mode\n",
     "\n",
+    "init_notebook_mode(all_interactive=True)\n",
     "fix_global_seed()\n",
     "\n",
     "project_root = os.path.abspath(os.path.join(os.path.dirname(ipynbname.path()), '..'))\n",
@@ -50,7 +52,7 @@
     "    'axes.labelsize': 16,\n",
     "    'xtick.labelsize': 14,\n",
     "    'ytick.labelsize': 14,\n",
-    "    'legend.fontsize': 14,\n",
+    "    'legend.fontsize': 16,\n",
     "    'figure.dpi': 300,\n",
     "})\n",
     "\n",
