--- a/notes/note_patch_emb.ipynb
+++ b/notes/note_patch_emb.ipynb
@@ -25,6 +25,10 @@
     "from umap import UMAP\n",
     "import ipynbname\n",
     "from endaaman.ml import fix_global_seed\n",
+    "from itables import init_notebook_mode\n",
+    "\n",
+    "init_notebook_mode(all_interactive=True)\n",
+    "fix_global_seed()\n",
     "\n",
     "project_root = os.path.abspath(os.path.join(os.path.dirname(ipynbname.path()), '..'))\n",
     "if project_root not in sys.path:\n",
@@ -32,25 +36,19 @@
     "os.chdir(project_root)\n",
     "print('now working', project_root)\n",
     "\n",
-    "DPI = 600\n",
     "\n",
-    "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
-    "# sns.set_theme(style=\"white\")\n",
-    "# plt.rcParams['font.family'] = 'DejaVu Sans'\n",
-    "# plt.rcParams['font.family'] = 'Verdana'\n",
-    "plt.rcParams['font.size'] = 10  \n",
-    "plt.rcParams['axes.labelsize'] = 12  \n",
-    "plt.rcParams['axes.titlesize'] = 14  \n",
-    "plt.rcParams['xtick.labelsize'] = 10  \n",
-    "plt.rcParams['ytick.labelsize'] = 10 \n",
-    "plt.rcParams['figure.dpi'] = DPI\n",
+    "sns.set_theme(style='ticks', palette='tab10')\n",
+    "plt.rcParams.update({\n",
+    "    'font.size': 14,\n",
+    "    'axes.titlesize': 18,\n",
+    "    'axes.labelsize': 16,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14,\n",
+    "    'legend.fontsize': 16,\n",
+    "    'figure.dpi': 300,\n",
+    "})\n",
     "\n",
-    "os.makedirs('out/figs', exist_ok=True)\n",
-    "\n",
-    "fix_global_seed()\n",
-    "\n",
-    "# print(f\"デフォルトのフォント: {plt.rcParams['font.sans-serif']}\")\n",
-    "# print(', '.join(sorted(list(set([font.name for font in fontManager.ttflist if not font.name.startswith('Noto')])))))"
+    "os.makedirs('out/figs', exist_ok=True)"
    ]
   },
   {
