--- a/notes/note_samples.ipynb
+++ b/notes/note_samples.ipynb
@@ -52,11 +52,182 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d1902a9-848e-454e-be31-eeff38ecacdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import ImageDraw, ImageFont\n",
+    "\n",
+    "def get_samples(target, targets, subdir='typical'):\n",
+    "    data = []\n",
+    "    for i, (fold, diag, name, x, y) in enumerate(targets):\n",
+    "        if target == 'cv':\n",
+    "            pp = {\n",
+    "                'Original': ['org', f'data/tmp/cam_crop/{fold}_test/{diag}/{name}.jpg'],\n",
+    "                'UNI(LP)': ['uni_lp', f'out/compare/LMGAOB/fold5_{fold}/frozen_uni_500/pred_crop/test/{diag}/{name}.jpg'],\n",
+    "                'UNI(FT)': ['uni_ft', f'out/compare/LMGAOB/fold5_{fold}/unfrozen_uni_500/pred_crop/test/{diag}/{name}.jpg'],\n",
+    "                r'ViT-L$\\mathrm{_{IN}}$(FT)': ['vit_ft', f'out/compare/LMGAOB/fold5_{fold}/unfrozen_baseline-vit_500/pred_crop/test/{diag}/{name}.jpg'],\n",
+    "            }\n",
+    "        elif target == 'ebrains':\n",
+    "            pp = {\n",
+    "                'Original': ['org', f'data/tmp/cam_crop/{fold}_ebrains/{diag}/{name}.jpg'],\n",
+    "                'UNI(LP)': ['uni_lp', f'out/compare/LMGAOB/fold5_{fold}/frozen_uni_500/pred_crop/ebrains/{diag}/{name}.jpg'],\n",
+    "                'UNI(FT)': ['uni_ft', f'out/compare/LMGAOB/fold5_{fold}/unfrozen_uni_500/pred_crop/ebrains/{diag}/{name}.jpg'],\n",
+    "                r'ViT-L$\\mathrm{_{IN}}$(FT)': ['vit_ft', f'out/compare/LMGAOB/fold5_{fold}/unfrozen_baseline-vit_500/pred_crop/ebrains/{diag}/{name}.jpg'],\n",
+    "            }\n",
+    "        else:\n",
+    "            raise RuntimeError('Invalid target', target)\n",
+    "        for label, (c, p) in pp.items():\n",
+    "            img = Image.open(p)\n",
+    "            g = 512\n",
+    "            crop_size = g*2\n",
+    "            img = img.crop((x*g, y*g, x*g+crop_size, y*g+crop_size))\n",
+    "            data.append({\n",
+    "                'label': label,\n",
+    "                'diag': diag,\n",
+    "                'image': img,\n",
+    "            })\n",
+    "            dest_dir = f'out/figs/fig4/{subdir}' if target == 'cv' else f'out/figs/fig5/{subdir}'\n",
+    "            os.makedirs(dest_dir, exist_ok=True)\n",
+    "            if c == 'org':                \n",
+    "                draw = ImageDraw.Draw(img)\n",
+    "                bar_w = 224 # equals 100μm\n",
+    "                bar_h = 24\n",
+    "                m = 16\n",
+    "                draw.rectangle(\n",
+    "                    [\n",
+    "                        m,\n",
+    "                        img.height-bar_h-m,\n",
+    "                        m+bar_w,\n",
+    "                        img.height-m,\n",
+    "                    ],\n",
+    "                    fill='black'\n",
+    "                )\n",
+    "            img.save(f'{dest_dir}/{i}_{diag}_{c}.png')\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def show_grid(samples, cols):\n",
+    "    rows = len(samples)//cols\n",
+    "    fig = plt.figure(figsize=(cols*3, rows*3))\n",
+    "    gs = gridspec.GridSpec(rows, cols)\n",
+    "    gs.update(wspace=0.1, hspace=0.2)\n",
+    "    for idx, item in enumerate(samples):\n",
+    "        ax = plt.subplot(gs[idx])\n",
+    "        ax.imshow(item['image'])\n",
+    "        ax.axis('off')\n",
+    "        ax.set_title(f\"{item['diag']} - {item['label']}\")\n",
+    "        \n",
+    "    # plt.tight_layout()\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "169da624-127b-47f0-95ed-78dc7019230d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# samples"
+    "typical = [\n",
+    "    [3, 'G', '19-1132', 0, 4],\n",
+    "    [3, 'G', 'N22-272', 5, 3],\n",
+    "    [3, 'A', 'N22-166', 0, 4],\n",
+    "    [3, 'A', 'N21-163', 3, 1],\n",
+    "    [3, 'O', 'N19-204', 1, 2],\n",
+    "    # ['O', 'N19-204', 5, 3],\\\n",
+    "    [3, 'O', '19-1570', 4, 3],\n",
+    "    [3, 'M', 'N21-267', 3, 3],\n",
+    "    [3, 'L', 'N21-297', 5, 2],    \n",
+    "]\n",
+    "\n",
+    "typical_samples = get_samples('cv', typical, 'typical')\n",
+    "show_grid(typical_samples, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e52b099e-015b-4c89-b8a9-65d2b7ffda99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atypical = [\n",
+    "    [1, 'G', '22-0107', 2, 1], \n",
+    "    # [2, 'G', 'N21-205', 5, 2], \n",
+    "    [4, 'G', 'N21-327', 4, 0], # failed\n",
+    "    [3, 'A', 'N21-163', 3, 5],\n",
+    "    [3, 'A', 'N22-193', 3, 6],\n",
+    "    [1, 'O', 'N19-277', 0, 0],\n",
+    "    [0, 'O', 'N20-276', 2, 2],\n",
+    "    # [1, 'M', '21-2158', 3, 2], # failed\n",
+    "    [4, 'M', 'N20-216', 1, 2], # failed\n",
+    "    [3, 'L', 'N22-263', 6, 4], # failed 各周囲明庭を呈すようなlmyphoma\n",
+    "]\n",
+    "\n",
+    "atypical_samples = get_samples('cv', atypical, 'atypical')\n",
+    "show_grid(atypical_samples, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "490e6352-44dc-48d6-9e36-794454e7ebd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typical_samples = [\n",
+    "    [0, 'G', 'a1963015-357f-11eb-a1d3-001a7dda7111', 5, 2],\n",
+    "    [0, 'G', 'a1951ea4-357f-11eb-a591-001a7dda7111', 6, 2],    \n",
+    "    [0, 'G', 'a195bade-357f-11eb-96cc-001a7dda7111', 1, 0],   # 分厚い\n",
+    "    [0, 'A', 'a194f78d-357f-11eb-a5e4-001a7dda7111', 3, 1],\n",
+    "    [0, 'A', 'a195e1ef-357f-11eb-b7e2-001a7dda7111', 0, 0],\n",
+    "    [0, 'A', 'a195bb4e-357f-11eb-99dd-001a7dda7111', 1, 1],\n",
+    "    [0, 'A', 'a1982c51-357f-11eb-a788-001a7dda7111', 4, 2],     \n",
+    "    [0, 'O', 'a195e23e-357f-11eb-9b42-001a7dda7111', 1, 1], # AO or 0, 1\n",
+    "    [0, 'O', 'a197ddfd-357f-11eb-836d-001a7dda7111', 1, 0], # AO\n",
+    "    [0, 'O', 'a195bb4a-357f-11eb-adce-001a7dda7111', 1, 1], # O\n",
+    "    [0, 'L', 'a19768d6-357f-11eb-ac19-001a7dda7111', 3, 1], # 小型小型\n",
+    "    [0, 'L', 'a196575f-357f-11eb-b320-001a7dda7111', 3, 1], # 血管周囲\n",
+    "    [0, 'L', 'a1980585-357f-11eb-b797-001a7dda7111', 0, 1], # 隙間出血\n",
+    "    [0, 'L', 'a1971a95-357f-11eb-b88b-001a7dda7111', 0, 0], # パッチをまたいだ一貫した反応\n",
+    "    [0, 'M', 'a1980508-357f-11eb-831f-001a7dda7111', 0, 1], # 必ずしもviableな成分に反応するわけでもない\n",
+    "    [0, 'M', 'a195e22b-357f-11eb-93f0-001a7dda7111', 1, 1], # 壊死の反応パターン\n",
+    "]\n",
+    "\n",
+    "typical_samples = get_samples('ebrains', typical_samples, 'typical')\n",
+    "show_grid(typical_samples, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d429c82-19ac-4b5c-b228-200b5bb13c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atypical_samples  = [\n",
+    "    [0, 'G', 'a195bb37-357f-11eb-972f-001a7dda7111', 0, 0], # 間質に反応しながらも一貫してパターンの誤認\n",
+    "    [0, 'G', 'a195bb18-357f-11eb-8a27-001a7dda7111', 2, 2], # 青い\n",
+    "    [0, 'G', 'a195e235-357f-11eb-8350-001a7dda7111', 0, 0], # 青い\n",
+    "    [0, 'A', 'a196cc6b-357f-11eb-9ea0-001a7dda7111', 1, 1], # 青い\n",
+    "    [0, 'A', 'a195e1df-357f-11eb-a578-001a7dda7111', 3, 1], # GBM IDHmut\n",
+    "    [0, 'A', 'a195bacd-357f-11eb-bd17-001a7dda7111', 4, 2], # GとAで揺れた\n",
+    "    [0, 'A', 'a195bacd-357f-11eb-bd17-001a7dda7111', 4, 2], # GとAで揺れた\n",
+    "    [0, 'A', 'a195e242-357f-11eb-a382-001a7dda7111', 1, 1], # DA\n",
+    "    [0, 'A', 'a194f78d-357f-11eb-a5e4-001a7dda7111', 3, 0], # DA\n",
+    "    [0, 'O', 'a196a560-357f-11eb-aa24-001a7dda7111', 1, 1], # AO as L\n",
+    "    [0, 'O', 'a196f36f-357f-11eb-a625-001a7dda7111', 5, 2], # AO\n",
+    "    [0, 'O', 'a195bb19-357f-11eb-a220-001a7dda7111', 2, 0], # O, 青い\n",
+    "    [0, 'O', 'a194f782-357f-11eb-b41e-001a7dda7111', 1, 0], # AO\n",
+    "    [0, 'O', 'a195bac9-357f-11eb-839b-001a7dda7111', 1, 1], # どう見てもOっぽいがAになってる    \n",
+    "    [0, 'L', 'a194f78e-357f-11eb-aef1-001a7dda7111', 1, 0],\n",
+    "    [0, 'L', 'a19609a3-357f-11eb-99d4-001a7dda7111', 1, 1], # 一部でなぞのM判定\n",
+    "    [0, 'M', 'a195e206-357f-11eb-b861-001a7dda7111', 2, 0], # Lと誤判定\n",
+    "]\n",
+    "\n",
+    "atypical_samples = get_samples('ebrains', atypical_samples, 'atypical')\n",
+    "show_grid(atypical_samples, 4)"
    ]
   }
  ],
